--- a/manuscript_Rmd/Acadian_seaplants_v1.Rmd
+++ b/manuscript_Rmd/Acadian_seaplants_v1.Rmd
@@ -1,11 +1,11 @@
 ---
 output: 
-  word_document:
-#  pdf_document:
-#    keep_tex: true
+#  word_document:
+  pdf_document:
+    keep_tex: true
     fig_caption: true
-#    latex_engine: pdflatex
-#    template: ../reference_material/svm-latex-ms.tex
+    latex_engine: pdflatex
+    template: ../reference_material/svm-latex-ms.tex
 title: "**The effect of *Ascophyllum nodosum* extracts on tomato and pepper plant productivity and their associated fungal and bacterial communities.**"
 author:
 - name: Sébastien Renaut^1,2^,Jacynthe Masse^1,2^, Mengxuan Kong^1,2^, Mohamed Hijri^1,2^
@@ -68,9 +68,9 @@ DNA samples were then barcoded, pooled and sequenced (2X300bp, paired-end) using
 *Bioinformatics*  
 All bioinformatics, statistical, and graphical analyses further described were performed in R 3.4.4 (R Core Team 2018) and detailed scripts are available here (https://github.com/seb951/Acadian_Seaplants).  
 &nbsp;  
-We used the `R` package `dada2` @callahan2016dada2 to infer *Amplicon Sequence Variants (ASVs)*. `Dada2` offers accurate sample inference from amplicon data with single-nucleotide resolution in an open source (R) environments. Unlike the Operational Taxonomic Unit (OTU) approach (e.g. @schloss2009introducing, @caporaso2010qiime), ASV are not treated as cluster of sequences defined with an *ad hoc* sequence similarity threshold, thus allowing sequences and abundance counts to be compared among studies @callahan2016dada2.  
+We used the `R` package `dada2` @callahan2016dada2 to infer *Amplicon Sequence Variants (ASVs)*. `Dada2` offers accurate sample inference from amplicon data with single-nucleotide resolution in an open source (R) environments. Unlike the Operational Taxonomic Unit (OTU) approach (e.g. @schloss2009introducing, @caporaso2010qiime), ASV are not treated as cluster of sequences defined with an *ad hoc* sequence similarity threshold. Instead, after sequences are quality trimmed and error-corrected, `dada2` reveals the unique members of the sequenced community, thus allowing sequences and abundance counts to be compared among studies @callahan2016dada2.  
 &nbsp;  
-First, sequences were trimmed following strict quality thresholds (see parameter details in the accompanying `R` scripts). Following this, we applied the error model algorithm of `dada2` which incorporates quality information after filtering, unlike other OTU based methods. Then dereplication, sample inference, merging of paired end reads and removal of chimera reads were performed in order to obtain a sequence (ASVs) table of abundance per sample. Taxonomy was also assigned using the Ribosomal Database Project (RDP) Naive Bayesian Classifier algorithm from @wang2007naive. Depending on support (minimum bootstrap support of 80), we assigned taxonomy from Kingdom to species. We used the silva database formatted for `dada2` to infer bacterial taxa @silva. We used the @UNITE2017 fasta release (including singletons) to infer fungal taxa after formatting it to the `dada2` format using a custom `R` script. The pipeline was run on a multithreaded (48 CPUs) computer infrastructure provided by Westgrid (https://www.westgrid.ca/support/systems/cedar) and Compute Canada (www.computecanada.ca). Note that the pipeline was run separately for fungal-root, fungal-soil, bacteria-soil and bacteria-root samples given the markedly different type of amplicons, taxa and error models of each dataset.
+First, sequences were trimmed following strict quality thresholds (removing primers and low quality nucleotides, see parameter details in the accompanying `R` scripts). Following this, we applied the error model algorithm of `dada2` which incorporates quality information after filtering, unlike other OTU based methods. Then dereplication, sample inference, merging of paired end reads and removal of chimera reads were performed in order to obtain a sequence (ASVs) table of abundance per sample. Taxonomy was also assigned using the Ribosomal Database Project (RDP) Naive Bayesian Classifier algorithm from @wang2007naive. Depending on support (minimum bootstrap support of 80), we assigned taxonomy from Kingdom to species. We used the silva database formatted for `dada2` to infer bacterial taxa @silva. We used the @UNITE2017 fasta release (including singletons) to infer fungal taxa after formatting it to the `dada2` format using a custom `R` script. The pipeline was run on a multithreaded (48 CPUs) computer infrastructure provided by Westgrid (https://www.westgrid.ca/support/systems/cedar) and Compute Canada (www.computecanada.ca). Note that the pipeline was run separately for fungal-root, fungal-soil, bacteria-soil and bacteria-root samples given the markedly different type of amplicons, taxa and error models of each dataset.
 &nbsp;  
 &nbsp;  
 *Statistical analyses - plant productivity*  
@@ -118,9 +118,9 @@ Statistically, all six productivity measures significantly differed according to
 &nbsp;  
 &nbsp;  
 *Sequencing*  
-A total of 2.7 million paired-end raw reads were obtained for all samples combined (976,000 for fungi-soil, 920,000 for fungi-root, 309,000 for bacteria-soil and 535,000 for bacteria-root, Table 2). Note that sequencing samples were analysed separately for fungal-soil, fungal-root, bacteria-soil and bacteria-root conditions. On average, 46,965 paired-end reads were obtained per sample. After quality filters were applied, including removing chimeras, and paired-end reads were merged, an average of 18,435 sequences remained. While 192 soil samples for fungi and bacteria, and 92 root samples for fungi and bacteria were sequenced, three fungi-soil samples, 13 fungi-root samples and two bacteria-root samples were removed because they had to few reads based on our strict quality thresholds.  
+A total of 2.7 million paired-end raw reads were obtained for all samples combined (976,000 for fungi-soil, 920,000 for fungi-root, 309,000 for bacteria-soil and 535,000 for bacteria-root, Table 2). Note that sequencing samples were analysed separately for fungal-soil, fungal-root, bacteria-soil and bacteria-root conditions. On average, 47,664 paired-end reads were obtained per sample. After quality filters were applied, including removing chimeras, and paired-end reads were merged, an average of 19690 sequences remained. While 192 soil samples for fungi and bacteria, and 96 root samples for fungi and bacteria were sequenced, seven fungi-soil samples, 15 fungi-root samples and one bacteria-root samples were removed because they had to few reads based on our strict quality thresholds.  
 &nbsp;  
-The `dada2` pipeline infered, on average, 112 Amplicon Sequence Variants per sample (average of 163 fungal-soil ASV, 49 fungal-root ASVs, 112 bacterial-soil ASVs and 122 bacterial-root ASVs). Many of those were unique to one of a few samples (total number of 6,178 fungal-soil, 930 fungal-root, 10,120 bacterial-soil and 3,143 bacterial-roots ASVs). After quality filtering ASVs that were found in fewer than 10% of the samples, we retained 418, 169, 206 and 250 ASVs and which comprised 91%, 88%, 50% and 85% of all reads in the fungal-soil, fungal-root, bacterial-soil and bacterial-root samples, respectively.  
+The `dada2` pipeline infered, on average, 170 Amplicon Sequence Variants per sample (average of 176 fungal-soil ASV, 37 fungal-root ASVs, 269 bacterial-soil ASVs and 92 bacterial-root ASVs). Many of those were unique to one of a few samples (total number of 6,112 fungal-soil, 845 fungal-root, 9,352 bacterial-soil and 2,023 bacterial-roots ASVs). After quality filtering ASVs that were found in fewer than 10% of the samples, we retained 413, 106, 811 and 325 ASVs and which comprised 94%, 95%, 89% and 98% of all reads in the fungal-soil, fungal-root, bacterial-soil and bacterial-root samples, respectively.  
 &nbsp;  
 &nbsp; 
 ```{r summary Table2, echo=F}
@@ -137,14 +137,14 @@ kable(summary.table,format.args=list(big.mark = ','), digits =4,caption = "Seque
 &nbsp;  
 &nbsp;  
 *Root, soil, microbial and bacterial diversity*  
-We then analysed the whole community structure and report the relative abundance of taxa (family) for the fungal-soil, fungal-root, bacteria-soil and bacteria-root conditions (Figure 4). Fungal communities were dominated by Nectriaceae, both the in the root and soil samples. Bacterial root communities were largely dominated by the Cyanobacteria phylum (identified as *chloroplast* according to the Ribosomal Database Project Naive Bayesian Classifier and the silva database). In fact, these ASVs are likely sequenced chloroplasts from the plants themselves, despite the fact that the primer pair used should have primarly targeted the bacterial V3-V4 region of the 16S ribosomal gene. The bacterial family Bacilaceae dominated to a lesser extent the soil communities.  
+We then analysed the whole community structure and report the relative abundance of taxa (family) for the fungal-soil, fungal-root, bacteria-soil and bacteria-root conditions (Figure 4). Fungal communities were dominated by Nectriaceae, both the in the root and soil samples. The bacterial family Bacilaceae dominated to a lesser extent the soil communities. Bacterial root communities were largely dominated by the Cyanobacteria phylum (identified as *chloroplast* according to the Ribosomal Database Project Naive Bayesian Classifier and the silva database). In fact, these ASVs are likely sequenced chloroplasts from the plants themselves, despite the fact that the primer pair used should have primarly targeted the bacterial V3-V4 region of the 16S ribosomal gene.     
 &nbsp;  
 ![Figure 4](../figures/Figure4_FAMILY_barplots.pdf){width=700px}  
 **Figure 4: Barplots fo the relative abundance of ASVs for fungal-root, fungal-soil, bacteria-soil and bacteria-root**  
 &nbsp;  
 &nbsp;  
 *Local ($a$-diversity)*  
-The diversity of each site ($a$-diversity) was calculated seperately for each sample and under each experimental conditions (fungi-soil, fungi-root, bacteria-soil and bacteria-root, Figure 5). Linear mixed effects models used to assess significance. In soils samples, fungal diversity differed with respect to the fertilization ($F_{(1,161)}$=14.35, *p*-value<0.0001) and planting ($F_{(1,161)}$=41.00, *p*-value<0.0001) treatment, but not the species ($F_{(1,161)}$=0.13, *p*-value=0.72). In root samples, fungal diversity differed with respect to the fertilization treatment ($F_{(1,56)}$=13.56, *p*-value=0.001), and the species tested ($F_{(1,56)}$=74.31, *p*-value=0.003). In soil samples, bacterial diversity differed with respect to the fertilization treatment ($F_{(1,165)}$=46.25, *p*-value<0.0001), planting ($F_{(1,165)}$=48.77, *p*-value<0.0001) and species ($F_{(1,165)}$=10.22, *p*-value=0.002). In root samples, bacterial diversity differed with respect to the fertilization treatment ($F_{(1,67)}$=16.48, *p*-value=0.0001), and the species tested ($F_{(1,67)}$=523.42, *p*-value<0.0001).
+The diversity of each site ($a$-diversity) was calculated seperately for each sample and under each experimental conditions (fungi-soil, fungi-root, bacteria-soil and bacteria-root, Figure 5). Linear mixed effects models used to assess significance. In soils samples, fungal diversity did not differ with respect to the fertilization ($F_{(1,161)}$=0.17, *p*-value=0.6853), but did so with respect to planting ($F_{(1,161)}$=9.00, *p*-value<0.0032) treatment and species ($F_{(1,161)}$=13.03, *p*-value=0.0003). In root samples, fungal diversity differed with respect to the fertilization treatment ($F_{(1,56)}$=10.1, *p*-value=0.003), and the species tested ($F_{(1,56)}$=4.5, *p*-value=0.04). In soil samples, bacterial diversity differed with respect to the fertilization treatment ($F_{(1,165)}$=17.13, *p*-value<0.0001), planting ($F_{(1,165)}$=139.0, *p*-value<0.0001) but not species ($F_{(1,165)}$=1.89, *p*-value=0.17). In root samples, bacterial diversity differed with respect to the fertilization treatment ($F_{(1,67)}$=17.27, *p*-value=0.0001), and the species tested ($F_{(1,67)}$=359.69, *p*-value<0.0001).
 &nbsp;  
 ![Figure 5](../figures/Figure5_alpha.pdf){width=600px}  
 **Figure 5: Boxplot of alpha diversity according to the treatment, species and planting effect for fungal-root, fungal-soil, bacteria-soil and bacteria-root.**  
@@ -173,9 +173,9 @@ Canonical correspondence analyses indicated how fertilized samples clustered tog
 &nbsp;  
 
 \newpage  
-Next, we identified, for each ordination, the ten ASVs most closely related to the three constrains which behaved in a similar fashion (productivity measures of root fresh weight, shoots fresh weight and fruit number). These ASVs were considered as putative candidates sequences most positively impacted (increase presence of the ASV) by fertilization. We further analysed the corresponding sequences for these eigthy candidates (ten candidates \* eight ordinations) ASVs in two seperate alignments (one for fungi and one for bacterial ASVs) and their accompanying neighbouring joining trees. In fungi, we identified one cluster of ASVs taxonomically assigned to *Olpidium brassicae* (fungal obligate parasite in the phylum Chytridiomycota) that forms the majority of ASVs most closely related to productivity. In addition, we identified five different ASVs in both species and both root and soil closely related phylogenetically. Given that no taxonomy was assigned to these sequences through the `dada2` RDP bootstrap approach, we used a BLASTn @altschul1997gapped approach (against NCBI nr) to identify the most closely related sequences. We identified this cluster of ASVs as *Rhogostoma schuessleri (BLASTn, e-value=2e-74)*, a protist in the phylum Cercozoa, which are known to be present in the soil and phyllosphere @dumack2017rhogostomidae .  
+Next, we identified, for each ordination, the ten ASVs most closely related to the three constrains which behaved in a similar fashion (productivity measures of root fresh weight, shoots fresh weight and fruit number). These ASVs were considered as putative candidates sequences most positively impacted (increase presence of the ASV) by fertilization. We further analysed the corresponding sequences for these eigthy candidates (ten candidates \* eight ordinations) ASVs in two seperate alignments (one for fungi and one for bacterial ASVs) and their accompanying neighbouring joining trees. In fungi, we identified one cluster of ASVs taxonomically assigned to *Mortierella* (soil saprotrophs in the phylum Zygomycota) closely related to productivity in both tomato and pepper roots. In addition, we identified a cluster of four different ASVs in tomato soil (ASV132, ASV153) and pepper-root (ASV19 & AV17) closely related phylogenetically. Given that no taxonomy was assigned to these sequences through the `dada2` RDP bootstrap approach, we used a BLASTn @altschul1997gapped approach (against NCBI nr) to identify the most closely related sequences. We identified this cluster of ASVs as *Rhogostoma schuessleri (BLASTn, e-value=4e-76)*, a protist in the phylum Cercozoa, which are known to be present in the soil and phyllosphere @dumack2017rhogostomidae .  
 &nbsp;  
-In bacteria-roots, we identified a cluster of ten closely related sequences taxonomically assigned to *Chloroplast*, and which likely originate from the plants themselves. We also identified a number of ASVs associated with productivity in the soil of both the pepper and tomato plants. Notably, ASV100 & ASV73 (*Oerskovia* spp.), ASV231 (*Blastocatellaceae*), ASV515, ASV1105 & ASV647 (*Bacillaceae*), ASV107 (*Methyloligellaceae*) and ASV95 & ASV107 (*Santhobacteraceae*) were identified.
+CHECK CHECK CHECK CHECK In bacteria-roots, we identified a cluster of ten closely related sequences taxonomically assigned to *Chloroplast*, and which likely originate from the plants themselves. We also identified a number of ASVs associated with productivity in the soil of both the pepper and tomato plants. Notably, ASV100 & ASV73 (*Oerskovia* spp.), ASV231 (*Blastocatellaceae*), ASV515, ASV1105 & ASV647 (*Bacillaceae*), ASV107 (*Methyloligellaceae*) and ASV95 & ASV107 (*Santhobacteraceae*) were identified.
 &nbsp;  
 &nbsp;  
 ![Figure 7](../figures/Figure7_candidateASVs.pdf){width=400px, dpi=500}  
